--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
 .slite-1{
     background-image: url("/images/slider-left-dec.png");
     background-repeat: no-repeat;
+     background-size: cover;
     
 
 }
